.docker/envoy_connect.yaml
# tcp socket on http/htt2 config ref：
#   https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/http/upgrades#tunneling-tcp-over-http
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
    - name: listener_tcp_term
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: stat_tcp_term
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            connect_matcher: {}
                            headers:
                              name: ":authority"
                              exact_match: tcp_server:5555
                          route:
                            cluster: cluster_tcp_term
                            upgrade_configs:
                              - upgrade_type: CONNECT
                                connect_config: {}
                http_filters:
                  - name: envoy.filters.http.router
                http_protocol_options: {}

    - name: listener_tcp_encape
      address:
        socket_address: { address: 0.0.0.0, port_value: 20000 }
      filter_chains:
        - filters:
            - name: tcp
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: tcp_stats
                cluster: cluster_tcp_encap
                tunneling_config:
                  hostname: tcpserver:1000

  clusters:
    - name: cluster_tcp_term
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster_tcp_term
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: tcpserver, port_value: 1000 }
