.docker/envoy_post.yaml
# REF https://github.com/envoyproxy/envoy/pull/14552)
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
    - name: listener_tcp_term
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: stat_tcp_term
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /
                            headers:
                              - name: :method
                                exact_match: POST
                          route:
                            cluster: cluster_tcp_term
                            upgrade_configs:
                              - upgrade_type: CONNECT
                                connect_config: { allow_post: true }
                http_filters:
                  - name: envoy.filters.http.router
                http_protocol_options: {}

    - name: listener_tcp_encape
      address:
        socket_address: { address: 0.0.0.0, port_value: 20000 }
      filter_chains:
        - filters:
            - name: tcp
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: tcp_stats
                cluster: cluster_tcp_encap
                tunneling_config:
                  hostname: tcpserver:1000
                  use_post: true

  clusters:
    - name: cluster_tcp_term
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster_tcp_term
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: tcpserver, port_value: 1000 }

    - name: cluster_tcp_encap
      connect_timeout: 0.25s
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
      load_assignment:
        cluster_name: cluster_tcp_encap
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 10000
